--- a/data/inference.ipynb
+++ b/data/inference.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ac6810a7",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "bccdfa37",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "054aa598",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e4642428",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        ")"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "a4caf3ee",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "36ee5a12",
    "metadata": {},
    "outputs": [],
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "135234ac",
    "metadata": {},
    "outputs": [
@@ -561,9 +561,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 52.15401602650807\n",
-      "MSE: 13657.210249809725\n",
-      "SMAPE: 18.404125804774228\n"
+      "MAE: 52.13242487789966\n",
+      "MSE: 13657.53318874847\n",
+      "SMAPE: 18.93091334276678\n"
      ]
     }
    ],
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "85fd9a23",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1bca350d",
    "metadata": {},
    "outputs": [
@@ -610,9 +610,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 53.40215965944758\n",
-      "MSE: 13742.825941714329\n",
-      "SMAPE: 35.68540255583657\n"
+      "MAE: 53.30732863635005\n",
+      "MSE: 13735.57736111121\n",
+      "SMAPE: 34.94289842556109\n"
      ]
     }
    ],
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "0a0d464d",
    "metadata": {},
    "outputs": [
@@ -656,13 +656,13 @@
       "\u001b[1m35/35\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step\n",
       "MAE: 261.3153047743429\n",
       "MSE: 250991.07559579433\n",
-      "SMAPE: 74.19068151225248\n"
+      "SMAPE: 76.38874824064708\n"
      ]
     }
    ],
    "source": [
     "Rs_output, Rd_output = lstm_model.predict(X)\n",
-    "lstm_destillated_1 = Rd_output.flatten() \n",
+    "lstm_destillated_1 = Rd_output #.flatten() \n",
     "#Resultados de modelos teacher sobre el conjunto de validación \n",
     "mae = mean_absolute_error(y, lstm_destillated_1)\n",
     "mse = mean_squared_error(y, lstm_destillated_1)\n",
@@ -671,6 +671,24 @@
     "print(\"MAE:\", mae)\n",
     "print(\"MSE:\", mse)\n",
     "print(\"SMAPE:\", smape_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1bb1f9b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "# Ejemplo: tensor en GPU con gradiente\n",
+    "t = torch.randn(5, requires_grad=True)\n",
+    "\n",
+    "# 1) Desacoplar del grafo\n",
+    "# 2) Mover a CPU (si estaba en GPU)\n",
+    "# 3) Convertir a numpy\n",
+    "arr = t.detach().numpy()\n"
    ]
   },
   {
@@ -683,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "eccbcb98",
    "metadata": {},
    "outputs": [
@@ -691,10 +709,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m35/35\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step\n",
-      "MAE: 262.2399413933195\n",
-      "MSE: 251619.29812068972\n",
-      "SMAPE: 77.00670830132653\n"
+      "\u001b[1m35/35\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step\n",
+      "MAE: 262.3598562007464\n",
+      "MSE: 251784.36954757158\n",
+      "SMAPE: 76.74693424691398\n"
      ]
     }
    ],
@@ -721,19 +739,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
+   "id": "1117a344",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1114, 15, 1)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2b09deca",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\criju\\AppData\\Roaming\\Python\\Python311\\site-packages\\huggingface_hub\\file_download.py:943: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n",
-      "W0730 22:49:30.219000 18256 torch\\distributed\\elastic\\multiprocessing\\redirects.py:29] NOTE: Redirects are currently not supported in Windows or MacOs.\n",
-      "C:\\Users\\criju\\AppData\\Roaming\\Python\\Python311\\site-packages\\huggingface_hub\\file_download.py:943: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
+     "ename": "AttributeError",
+     "evalue": "'DynamicCache' object has no attribute 'seen_tokens'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 22\u001b[0m\n\u001b[0;32m     20\u001b[0m std \u001b[38;5;241m=\u001b[39m std\u001b[38;5;241m.\u001b[39mclamp(\u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-6\u001b[39m) \u001b[38;5;66;03m# Evitar división por cero\u001b[39;00m\n\u001b[0;32m     21\u001b[0m normed_seq \u001b[38;5;241m=\u001b[39m (t \u001b[38;5;241m-\u001b[39m mean) \u001b[38;5;241m/\u001b[39m std         \u001b[38;5;66;03m# (1,15)\u001b[39;00m\n\u001b[1;32m---> 22\u001b[0m output \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnormed_seq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_new_tokens\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43muse_cache\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m  \n\u001b[0;32m     23\u001b[0m normed_pred \u001b[38;5;241m=\u001b[39m output[:, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m:]            \u001b[38;5;66;03m# (1,1)\u001b[39;00m\n\u001b[0;32m     24\u001b[0m pred \u001b[38;5;241m=\u001b[39m normed_pred \u001b[38;5;241m*\u001b[39m std \u001b[38;5;241m+\u001b[39m mean         \u001b[38;5;66;03m# (1,1)\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\torch\\utils\\_contextlib.py:116\u001b[0m, in \u001b[0;36mcontext_decorator.<locals>.decorate_context\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    113\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(func)\n\u001b[0;32m    114\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecorate_context\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m    115\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m ctx_factory():\n\u001b[1;32m--> 116\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\criju\\.conda\\envs\\ts\\Lib\\site-packages\\transformers\\generation\\utils.py:2633\u001b[0m, in \u001b[0;36mGenerationMixin.generate\u001b[1;34m(self, inputs, generation_config, logits_processor, stopping_criteria, prefix_allowed_tokens_fn, synced_gpus, assistant_model, streamer, negative_prompt_ids, negative_prompt_attention_mask, use_model_defaults, custom_generate, **kwargs)\u001b[0m\n\u001b[0;32m   2625\u001b[0m     input_ids, model_kwargs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_expand_inputs_for_generation(\n\u001b[0;32m   2626\u001b[0m         input_ids\u001b[38;5;241m=\u001b[39minput_ids,\n\u001b[0;32m   2627\u001b[0m         expand_size\u001b[38;5;241m=\u001b[39mgeneration_config\u001b[38;5;241m.\u001b[39mnum_return_sequences,\n\u001b[0;32m   2628\u001b[0m         is_encoder_decoder\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mis_encoder_decoder,\n\u001b[0;32m   2629\u001b[0m         \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mmodel_kwargs,\n\u001b[0;32m   2630\u001b[0m     )\n\u001b[0;32m   2632\u001b[0m     \u001b[38;5;66;03m# 12. run sample (it degenerates to greedy search when `generation_config.do_sample=False`)\u001b[39;00m\n\u001b[1;32m-> 2633\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_sample\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   2634\u001b[0m \u001b[43m        \u001b[49m\u001b[43minput_ids\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   2635\u001b[0m \u001b[43m        \u001b[49m\u001b[43mlogits_processor\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mprepared_logits_processor\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   2636\u001b[0m \u001b[43m        \u001b[49m\u001b[43mstopping_criteria\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mprepared_stopping_criteria\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   2637\u001b[0m \u001b[43m        \u001b[49m\u001b[43mgeneration_config\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgeneration_config\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   2638\u001b[0m \u001b[43m        \u001b[49m\u001b[43msynced_gpus\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msynced_gpus\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   2639\u001b[0m \u001b[43m        \u001b[49m\u001b[43mstreamer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstreamer\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   2640\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mmodel_kwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   2641\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2643\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m generation_mode \u001b[38;5;129;01min\u001b[39;00m (GenerationMode\u001b[38;5;241m.\u001b[39mBEAM_SAMPLE, GenerationMode\u001b[38;5;241m.\u001b[39mBEAM_SEARCH):\n\u001b[0;32m   2644\u001b[0m     \u001b[38;5;66;03m# 11. interleave input_ids with `num_beams` additional sequences per batch\u001b[39;00m\n\u001b[0;32m   2645\u001b[0m     input_ids, model_kwargs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_expand_inputs_for_generation(\n\u001b[0;32m   2646\u001b[0m         input_ids\u001b[38;5;241m=\u001b[39minput_ids,\n\u001b[0;32m   2647\u001b[0m         expand_size\u001b[38;5;241m=\u001b[39mgeneration_config\u001b[38;5;241m.\u001b[39mnum_beams,\n\u001b[0;32m   2648\u001b[0m         is_encoder_decoder\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mis_encoder_decoder,\n\u001b[0;32m   2649\u001b[0m         \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mmodel_kwargs,\n\u001b[0;32m   2650\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\Users\\criju\\.conda\\envs\\ts\\Lib\\site-packages\\transformers\\generation\\utils.py:3607\u001b[0m, in \u001b[0;36mGenerationMixin._sample\u001b[1;34m(self, input_ids, logits_processor, stopping_criteria, generation_config, synced_gpus, streamer, **model_kwargs)\u001b[0m\n\u001b[0;32m   3603\u001b[0m     is_prefill \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m   3605\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_has_unfinished_sequences(this_peer_finished, synced_gpus, device\u001b[38;5;241m=\u001b[39minput_ids\u001b[38;5;241m.\u001b[39mdevice):\n\u001b[0;32m   3606\u001b[0m     \u001b[38;5;66;03m# prepare model inputs\u001b[39;00m\n\u001b[1;32m-> 3607\u001b[0m     model_inputs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprepare_inputs_for_generation\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_ids\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mmodel_kwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3609\u001b[0m     \u001b[38;5;66;03m# prepare variable output controls (note: some models won't accept all output controls)\u001b[39;00m\n\u001b[0;32m   3610\u001b[0m     model_inputs\u001b[38;5;241m.\u001b[39mupdate({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moutput_attentions\u001b[39m\u001b[38;5;124m\"\u001b[39m: output_attentions} \u001b[38;5;28;01mif\u001b[39;00m output_attentions \u001b[38;5;28;01melse\u001b[39;00m {})\n",
+      "File \u001b[1;32m~\\.cache\\huggingface\\modules\\transformers_modules\\Maple728\\TimeMoE-50M\\446753ee48ff3726d0606a81d0092d54acee995e\\modeling_time_moe.py:1116\u001b[0m, in \u001b[0;36mTimeMoeForPrediction.prepare_inputs_for_generation\u001b[1;34m(self, input_ids, past_key_values, attention_mask, inputs_embeds, **kwargs)\u001b[0m\n\u001b[0;32m   1114\u001b[0m cache_length \u001b[38;5;241m=\u001b[39m past_key_values\u001b[38;5;241m.\u001b[39mget_seq_length()\n\u001b[0;32m   1115\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(past_key_values, DynamicCache):\n\u001b[1;32m-> 1116\u001b[0m     past_length \u001b[38;5;241m=\u001b[39m \u001b[43mpast_key_values\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mseen_tokens\u001b[49m\n\u001b[0;32m   1117\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1118\u001b[0m     past_length \u001b[38;5;241m=\u001b[39m cache_length\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DynamicCache' object has no attribute 'seen_tokens'"
      ]
     }
    ],
@@ -750,7 +793,7 @@
     "    device_map=\"cpu\",  # use \"cpu\" for CPU inference, and \"cuda\" for GPU inference.\n",
     "    trust_remote_code=True,\n",
     ")\n",
-    "\n",
+    "model.config.use_cache = False\n",
     "\n",
     "train_predict_teacher = []\n",
     "for arr in X:                   \n",
@@ -759,10 +802,64 @@
     "    std  = t.std(dim=-1, keepdim=True)    # (1,1)\n",
     "    std = std.clamp(min=1e-6) # Evitar división por cero\n",
     "    normed_seq = (t - mean) / std         # (1,15)\n",
-    "    output = model.generate(normed_seq, max_new_tokens=1)  \n",
+    "    output = model.generate(normed_seq, max_new_tokens=1,use_cache=True)  \n",
     "    normed_pred = output[:, -1:]            # (1,1)\n",
     "    pred = normed_pred * std + mean         # (1,1)\n",
     "    train_predict_teacher.append(pred.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7a4b296d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "# Asumiendo X: np.ndarray de forma (n_samples, window_size, 1)\n",
+    "# times_moe_model: AutoModelForCausalLM cargado con trust_remote_code=True\n",
+    "\n",
+    "# Pasa el modelo a modo evaluación\n",
+    "model.eval()\n",
+    "\n",
+    "train_predict_teacher = []\n",
+    "\n",
+    "# No gradientes ni cache\n",
+    "with torch.no_grad():\n",
+    "    for arr in X:\n",
+    "        # 1) Construir tensor y normalizar\n",
+    "        # arr es (window_size, 1) → lo aplanamos a (1, window_size)\n",
+    "        t = torch.from_numpy(arr.reshape(1, -1)).float()  \n",
+    "\n",
+    "        mean = t.mean(dim=-1, keepdim=True)   # (1,1)\n",
+    "        std  = t.std(dim=-1, keepdim=True).clamp(min=1e-6)  # (1,1)\n",
+    "        normed_seq = (t - mean) / std         # (1, window_size)\n",
+    "\n",
+    "        # 2) Forward directo\n",
+    "        outputs = model(normed_seq)\n",
+    "\n",
+    "        # 3) Extraer logits / predicción continua\n",
+    "        #    Dependiendo de la implementación el resultado puede venir en `.logits`\n",
+    "        if hasattr(outputs, \"logits\"):\n",
+    "            logits = outputs.logits       # ej. shape (1, seq_len, 1) o (1, seq_len+1, 1)\n",
+    "        else:\n",
+    "            logits = outputs              # si devuelve directamente el tensor\n",
+    "\n",
+    "        # 4) Agarrar el último paso para predecir el siguiente valor\n",
+    "        #    Si tiene 3 dims, asumimos (batch, seq_len, features)\n",
+    "        if logits.ndim == 3:\n",
+    "            normed_pred = logits[:, -1, :]    # (1, features)  → aquí features debería ser 1\n",
+    "        else:\n",
+    "            # si devuelve (1, seq_len) o (1, seq_len+1)\n",
+    "            normed_pred = logits[:, -1:]      # (1,)\n",
+    "\n",
+    "        # 5) Desnormalizar y extraer escalar\n",
+    "        pred = (normed_pred * std + mean).item()\n",
+    "\n",
+    "        train_predict_teacher.append(pred)\n",
+    "\n",
+    "# Al final, train_predict_teacher es una lista de floats con la predicción desnormalizada\n"
    ]
   },
   {
