--- a/data/Main.ipynb
+++ b/data/Main.ipynb
@@ -1392,6 +1392,271 @@
    "source": [
     "history.history['val_tor_loss']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e94f0c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Ciudad",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Neural-d",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Neural",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "LSTM-d",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "LSTM",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "TimesMoE",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "22e828b6-d5c8-4a8f-a91b-c610d5fa0acd",
+       "rows": [
+        [
+         "0",
+         "ANTIOQUIA",
+         "16.708",
+         "32.606",
+         "73.684",
+         "75.614",
+         "14.736"
+        ],
+        [
+         "1",
+         "BOGOTA",
+         "11.069",
+         "18.189",
+         "83.509",
+         "84.975",
+         "11.063"
+        ],
+        [
+         "2",
+         "BOYACA",
+         "32.489",
+         "58.354",
+         "59.943",
+         "63.534",
+         "26.292"
+        ],
+        [
+         "3",
+         "CALI",
+         "17.331",
+         "37.004",
+         "69.485",
+         "71.084",
+         "14.777"
+        ],
+        [
+         "4",
+         "CUNDINAMARCA",
+         "25.057",
+         "47.317",
+         "65.469",
+         "68.682",
+         "20.458"
+        ],
+        [
+         "5",
+         "MEDELLIN",
+         "18.949",
+         "37.641",
+         "70.441",
+         "72.191",
+         "15.884"
+        ],
+        [
+         "6",
+         "SANTANDER",
+         "24.871",
+         "47.188",
+         "66.796",
+         "69.754",
+         "21.134"
+        ],
+        [
+         "7",
+         "VALLE",
+         "15.4",
+         "33.12",
+         "71.736",
+         "73.07",
+         "13.449"
+        ]
+       ],
+       "shape": {
+        "columns": 6,
+        "rows": 8
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ciudad</th>\n",
+       "      <th>Neural-d</th>\n",
+       "      <th>Neural</th>\n",
+       "      <th>LSTM-d</th>\n",
+       "      <th>LSTM</th>\n",
+       "      <th>TimesMoE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ANTIOQUIA</td>\n",
+       "      <td>16.708</td>\n",
+       "      <td>32.606</td>\n",
+       "      <td>73.684</td>\n",
+       "      <td>75.614</td>\n",
+       "      <td>14.736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BOGOTA</td>\n",
+       "      <td>11.069</td>\n",
+       "      <td>18.189</td>\n",
+       "      <td>83.509</td>\n",
+       "      <td>84.975</td>\n",
+       "      <td>11.063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BOYACA</td>\n",
+       "      <td>32.489</td>\n",
+       "      <td>58.354</td>\n",
+       "      <td>59.943</td>\n",
+       "      <td>63.534</td>\n",
+       "      <td>26.292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CALI</td>\n",
+       "      <td>17.331</td>\n",
+       "      <td>37.004</td>\n",
+       "      <td>69.485</td>\n",
+       "      <td>71.084</td>\n",
+       "      <td>14.777</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CUNDINAMARCA</td>\n",
+       "      <td>25.057</td>\n",
+       "      <td>47.317</td>\n",
+       "      <td>65.469</td>\n",
+       "      <td>68.682</td>\n",
+       "      <td>20.458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>MEDELLIN</td>\n",
+       "      <td>18.949</td>\n",
+       "      <td>37.641</td>\n",
+       "      <td>70.441</td>\n",
+       "      <td>72.191</td>\n",
+       "      <td>15.884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>SANTANDER</td>\n",
+       "      <td>24.871</td>\n",
+       "      <td>47.188</td>\n",
+       "      <td>66.796</td>\n",
+       "      <td>69.754</td>\n",
+       "      <td>21.134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>VALLE</td>\n",
+       "      <td>15.400</td>\n",
+       "      <td>33.120</td>\n",
+       "      <td>71.736</td>\n",
+       "      <td>73.070</td>\n",
+       "      <td>13.449</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Ciudad  Neural-d  Neural  LSTM-d    LSTM  TimesMoE\n",
+       "0     ANTIOQUIA    16.708  32.606  73.684  75.614    14.736\n",
+       "1        BOGOTA    11.069  18.189  83.509  84.975    11.063\n",
+       "2        BOYACA    32.489  58.354  59.943  63.534    26.292\n",
+       "3          CALI    17.331  37.004  69.485  71.084    14.777\n",
+       "4  CUNDINAMARCA    25.057  47.317  65.469  68.682    20.458\n",
+       "5      MEDELLIN    18.949  37.641  70.441  72.191    15.884\n",
+       "6     SANTANDER    24.871  47.188  66.796  69.754    21.134\n",
+       "7         VALLE    15.400  33.120  71.736  73.070    13.449"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 1. Carga el CSV\n",
+    "df = pd.read_csv('metrics.csv')\n",
+    "\n",
+    "# 2. Pivot para dejar cada ciudad en fila y modelo en columna\n",
+    "pivot = df.pivot(index='city', columns='type', values='SMAPE')\n",
+    "pivot = pivot[['NeuralODE_distilled','NeuralODE_normal','LSTM_distilled','LSTM_normal','Times-MoE']]\n",
+    "pivot.columns = ['Neural-d','Neural','LSTM-d','LSTM', 'TimesMoE']\n",
+    "pivot = pivot.round(3)\n",
+    "pivot.index.name = 'Ciudad'\n",
+    "pivot = pivot.reset_index()\n",
+    "\n",
+    "# 3. Muestra el DataFrame\n",
+    "pivot\n"
+   ]
   }
  ],
  "metadata": {
