--- a/data/Main_neural.ipynb
+++ b/data/Main_neural.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "581d6296",
    "metadata": {},
    "outputs": [],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "338c2e35",
    "metadata": {},
    "outputs": [],
@@ -439,10 +439,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "052496a1",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The cache for model files in Transformers v4.22.0 has been updated. Migrating your old cache. This is a one-time only operation. You can interrupt this and resume the migration later on by calling `transformers.utils.move_cache()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f6e1fd5859b84f0c839a417e0a3c85fa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -457,28 +478,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20, Loss: 1.2142\n",
-      "Epoch 2/20, Loss: 1.0117\n",
-      "Epoch 3/20, Loss: 0.9921\n",
-      "Epoch 4/20, Loss: 0.9858\n",
-      "Epoch 5/20, Loss: 0.9826\n",
-      "Epoch 6/20, Loss: 0.9807\n",
-      "Epoch 7/20, Loss: 0.9795\n",
-      "Epoch 8/20, Loss: 0.9787\n",
-      "Epoch 9/20, Loss: 0.9783\n",
-      "Epoch 10/20, Loss: 0.9778\n",
-      "Epoch 11/20, Loss: 0.9772\n",
-      "Epoch 12/20, Loss: 0.9772\n",
-      "Epoch 13/20, Loss: 0.9769\n",
-      "Epoch 14/20, Loss: 0.9764\n",
-      "Epoch 15/20, Loss: 0.9765\n",
-      "Epoch 16/20, Loss: 0.9763\n",
-      "Epoch 17/20, Loss: 0.9764\n",
-      "Epoch 18/20, Loss: 0.9758\n",
-      "Epoch 19/20, Loss: 0.9756\n",
-      "Epoch 20/20, Loss: 0.9765\n",
-      "Mejor época = 19, Loss = 0.9756\n",
-      "MAE: 0.7114, MSE: 0.9644, sMAPE: 98.2612\n"
+      "Epoch 1/20, Loss: 1.3428\n",
+      "Epoch 2/20, Loss: 1.0278\n",
+      "Epoch 3/20, Loss: 0.9995\n",
+      "Epoch 4/20, Loss: 0.9894\n",
+      "Epoch 5/20, Loss: 0.9855\n",
+      "Epoch 6/20, Loss: 0.9827\n",
+      "Epoch 7/20, Loss: 0.9812\n",
+      "Epoch 8/20, Loss: 0.9795\n",
+      "Epoch 9/20, Loss: 0.9788\n",
+      "Epoch 10/20, Loss: 0.9785\n",
+      "Epoch 11/20, Loss: 0.9778\n",
+      "Epoch 12/20, Loss: 0.9780\n",
+      "Epoch 13/20, Loss: 0.9772\n",
+      "Epoch 14/20, Loss: 0.9774\n",
+      "Epoch 15/20, Loss: 0.9766\n",
+      "Epoch 16/20, Loss: 0.9764\n",
+      "Epoch 17/20, Loss: 0.9761\n",
+      "Epoch 18/20, Loss: 0.9767\n",
+      "Epoch 19/20, Loss: 0.9760\n",
+      "Epoch 20/20, Loss: 0.9763\n",
+      "Mejor época = 19, Loss = 0.9760\n",
+      "MAE: 0.7116, MSE: 0.9600, sMAPE: 98.7690\n"
      ]
     }
    ],
@@ -517,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5bea34f4",
    "metadata": {},
    "outputs": [],
