--- a/data/inference.ipynb
+++ b/data/inference.ipynb
@@ -243,11 +243,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"student_tor\"</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"student_tor_1\"</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mModel: \"student_tor\"\u001b[0m\n"
+       "\u001b[1mModel: \"student_tor_1\"\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -412,66 +412,105 @@
     "        window_size: int,\n",
     "        n_features: int,\n",
     "        lstm_units: int,\n",
-    "        epsilon: float,\n",
+    "        alpha: float = 1.0,        # alpha para la fórmula de epsilon (≈1 en el paper)\n",
     "        c_tor: float = 1.0,\n",
     "        c_dist: float = 1.0,\n",
     "        **kwargs\n",
     "    ):\n",
     "        super().__init__(**kwargs)\n",
-    "        # Guardamos los hiperparámetros para serializar\n",
     "        self.window_size = window_size\n",
     "        self.n_features  = n_features\n",
     "        self.lstm_units  = lstm_units\n",
-    "        self.epsilon     = epsilon\n",
+    "        self.alpha       = alpha\n",
     "        self.c_tor       = c_tor\n",
     "        self.c_dist      = c_dist\n",
     "\n",
-    "        self.lstm = LSTM(\n",
-    "            lstm_units,\n",
-    "            input_shape=(window_size, n_features),\n",
-    "            name=\"lstm_layer\"\n",
-    "        )\n",
-    "        self.dense_clean   = Dense(1, name=\"clean_output\")\n",
-    "        self.dense_teacher = Dense(1, name=\"teacher_output\")\n",
+    "        self.tor_metric  = tf.keras.metrics.Mean(name=\"tor_loss\")\n",
+    "        self.dist_metric = tf.keras.metrics.Mean(name=\"distill_loss\")\n",
+    "\n",
+    "        self.lstm = LSTM(lstm_units, input_shape=(window_size, n_features), name=\"lstm_layer\")\n",
+    "        self.dense_clean   = Dense(1, name=\"clean_output\")    # Rs\n",
+    "        self.dense_teacher = Dense(1, name=\"teacher_output\")  # Rd\n",
     "\n",
     "    def call(self, inputs, training=False):\n",
     "        x = self.lstm(inputs)\n",
     "        return self.dense_clean(x), self.dense_teacher(x)\n",
     "\n",
-    "    def compute_tor_loss(self, t, r_t_gt, Rs):\n",
+    "    # ---------- Estimación de epsilon usando MAD (igual que el paper) ----------\n",
+    "    def _eps_np(self, t_np, r_np, alpha_np, B_np):\n",
+    "        # t_np, r_np: arrays shape (batch,1)\n",
+    "        xi = (t_np.reshape(-1) - r_np.reshape(-1))\n",
+    "        med = np.median(xi)\n",
+    "        mad = np.median(np.abs(xi - med))\n",
+    "        sigma = 1.4826 * mad + 1e-12\n",
+    "        B = int(B_np) if int(B_np) > 0 else xi.size\n",
+    "        arg = (np.sqrt(2.0 * np.pi) * sigma * float(alpha_np)) / float(B)\n",
+    "        arg = max(arg, 1e-12)\n",
+    "        eps = sigma * np.sqrt(-2.0 * np.log(arg))\n",
+    "        return np.array(eps, dtype=np.float32)\n",
+    "\n",
+    "    def estimate_epsilon(self, t, r_t_gt, alpha=None, B=None):\n",
+    "        # devuelve scalar tf.float32\n",
+    "        if alpha is None:\n",
+    "            alpha = self.alpha\n",
+    "        # pasar batch size; tf.numpy_function acepta tensores\n",
+    "        batch_size = tf.shape(t)[0] if B is None else tf.cast(B, tf.int32)\n",
+    "        eps_tf = tf.numpy_function(\n",
+    "            func=self._eps_np,\n",
+    "            inp=[t, r_t_gt, tf.constant(float(alpha), dtype=tf.float32), batch_size],\n",
+    "            Tout=tf.float32\n",
+    "        )\n",
+    "        return tf.reshape(eps_tf, ())\n",
+    "\n",
+    "    # ---------- TOR loss recibe epsilon (scalar) ----------\n",
+    "    def compute_tor_loss(self, t, r_t_gt, Rs, epsilon):\n",
     "        err = tf.abs(t - r_t_gt)\n",
     "        clean_loss   = tf.square(Rs - t)\n",
-    "        outlier_loss = tf.sqrt(tf.square(Rs - r_t_gt) + 1e-6)\n",
-    "        return tf.where(err < self.epsilon, clean_loss, outlier_loss)\n",
+    "        outlier_loss = tf.sqrt(tf.abs(Rs - r_t_gt) + 1e-6)\n",
+    "        return tf.where(err < epsilon, clean_loss, outlier_loss)\n",
     "\n",
+    "    # ---------- train_step y test_step ----------\n",
     "    def train_step(self, data):\n",
     "        x, y = data\n",
     "        t      = y[:, 0:1]   # etiqueta real\n",
     "        r_t_gt = y[:, 1:2]   # pred teacher\n",
     "\n",
+    "        # estimar epsilon (del batch)\n",
+    "        epsilon_batch = self.estimate_epsilon(t, r_t_gt)\n",
+    "\n",
     "        with tf.GradientTape() as tape:\n",
     "            Rs, Rd = self(x, training=True)\n",
-    "            L_tor  = tf.reduce_mean(self.compute_tor_loss(t, r_t_gt, Rs))\n",
+    "            L_tor  = tf.reduce_mean(self.compute_tor_loss(t, r_t_gt, Rs, epsilon_batch))\n",
     "            L_dist = tf.reduce_mean(tf.abs(Rd - r_t_gt))\n",
     "            loss   = self.c_tor * L_tor + self.c_dist * L_dist\n",
     "\n",
     "        grads = tape.gradient(loss, self.trainable_variables)\n",
     "        self.optimizer.apply_gradients(zip(grads, self.trainable_variables))\n",
+    "\n",
+    "        # actualizar métricas\n",
     "        self.compiled_metrics.update_state(t, Rs)\n",
-    "        return {\n",
+    "        self.tor_metric.update_state(L_tor)\n",
+    "        self.dist_metric.update_state(L_dist)\n",
+    "\n",
+    "        # devolver dict de métricas (mantengo tu esquema original)\n",
+    "        out = {\n",
     "            \"loss\": loss,\n",
-    "            \"tor_loss\": L_tor,\n",
-    "            \"distill_loss\": L_dist,\n",
-    "            **{m.name: m.result() for m in self.metrics}\n",
+    "            \"tor_loss\": self.tor_metric.result(),\n",
+    "            \"distill_loss\": self.dist_metric.result(),\n",
     "        }\n",
+    "        # añadir métricas compiladas si existen\n",
+    "        for m in self.metrics:\n",
+    "            out[m.name] = m.result()\n",
+    "        return out\n",
     "\n",
     "    def test_step(self, data):\n",
     "        x, y = data\n",
     "        t      = y[:, 0:1]\n",
     "        r_t_gt = y[:, 1:2]\n",
-    "        Rs, Rd = self(x, training=False)\n",
+    "        epsilon_batch = self.estimate_epsilon(t, r_t_gt)\n",
     "\n",
-    "        L_tor  = tf.reduce_mean(self.compute_tor_loss(t, r_t_gt, Rs))\n",
+    "        Rs, Rd = self(x, training=False)\n",
+    "        L_tor  = tf.reduce_mean(self.compute_tor_loss(t, r_t_gt, Rs, epsilon_batch))\n",
     "        L_dist = tf.reduce_mean(tf.abs(Rd - r_t_gt))\n",
     "        loss   = self.c_tor * L_tor + self.c_dist * L_dist\n",
     "\n",
@@ -484,30 +523,29 @@
     "        }\n",
     "\n",
     "    def get_config(self):\n",
-    "        # Devuelve todo lo necesario para reconstruir la instancia\n",
     "        base_config = super().get_config()\n",
     "        return {\n",
     "            **base_config,\n",
     "            \"window_size\": self.window_size,\n",
     "            \"n_features\":  self.n_features,\n",
     "            \"lstm_units\":  self.lstm_units,\n",
-    "            \"epsilon\":     self.epsilon,\n",
+    "            \"alpha\":       self.alpha,\n",
     "            \"c_tor\":       self.c_tor,\n",
     "            \"c_dist\":      self.c_dist,\n",
     "        }\n",
     "\n",
     "    @classmethod\n",
     "    def from_config(cls, config):\n",
-    "        # Separar kwargs de Model (si los hubiera)\n",
     "        return cls(\n",
     "            window_size=config.pop(\"window_size\"),\n",
     "            n_features=config.pop(\"n_features\"),\n",
     "            lstm_units=config.pop(\"lstm_units\"),\n",
-    "            epsilon=config.pop(\"epsilon\"),\n",
-    "            c_tor=config.pop(\"c_tor\"),\n",
-    "            c_dist=config.pop(\"c_dist\"),\n",
+    "            alpha=config.pop(\"alpha\", 1.0),\n",
+    "            c_tor=config.pop(\"c_tor\", 1.0),\n",
+    "            c_dist=config.pop(\"c_dist\", 1.0),\n",
     "            **config\n",
     "        )\n",
+    "\n",
     "\n",
     "lstm_model = tf.keras.models.load_model(\n",
     "    \"Models_lstm/lstm_healthcare_model_3_destilation.keras\",\n",
@@ -561,9 +599,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 52.13242487789966\n",
-      "MSE: 13657.53318874847\n",
-      "SMAPE: 18.93091334276678\n"
+      "MAE: 52.15513340949584\n",
+      "MSE: 13657.41984617558\n",
+      "SMAPE: 18.871317525800748\n"
      ]
     }
    ],
@@ -653,10 +691,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m35/35\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step\n",
-      "MAE: 261.3153047743429\n",
-      "MSE: 250991.07559579433\n",
-      "SMAPE: 76.38874824064708\n"
+      "\u001b[1m35/35\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step\n",
+      "MAE: 261.4285825674474\n",
+      "MSE: 251431.71926834522\n",
+      "SMAPE: 76.49540673967925\n"
      ]
     }
    ],
@@ -701,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "eccbcb98",
    "metadata": {},
    "outputs": [
@@ -709,10 +747,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m35/35\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step\n",
+      "\u001b[1m35/35\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step\n",
       "MAE: 262.3598562007464\n",
       "MSE: 251784.36954757158\n",
       "SMAPE: 76.74693424691398\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -735,27 +784,6 @@
    "metadata": {},
    "source": [
     "## Resultados modelo timesMOE sobre test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "1117a344",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1114, 15, 1)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.shape"
    ]
   },
   {
